<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu.MenuActivity">
    <item
        android:id="@+id/about"
        android:title="@string/about"

        />

    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/ic_account"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/options"
        android:title="@string/options">

        <menu>
            <item
                android:id="@+id/upload"
                android:title="@string/upload" />
            <item
                android:id="@+id/download"
                android:title="@string/download" />
        </menu>

    </item>

    <item
        android:id="@+id/news"
        android:title="@string/news"
        app:showAsAction="always" />


</menu>